# LuGL

./: .clang-format  .gitignore  CMakeLists.txt  CMakeOptions.txt  CMakePresets.json  LICENSE  build-wasm.sh  vcpkg.json
cmake/: BuildOptions.cmake  EnumOption.cmake  GLEW_Import.cmake  Install.cmake  OpenGLConfigurations.cmake  Platform.cmake  VulkanConfigurations.cmake
cmake/Import/: GLM.cmake  SDL.cmake  fmt.cmake  spdlog.cmake
include/lugl/: lu_math.hpp  lu_platform.hpp  lu_renderer.hpp  lu_settings.hpp  lu_types.hpp  lu_window.hpp  luapi.hpp  lugl.hpp
include/lugl/platform/opengl/: lu_opengl_renderer.hpp
src/: CMakeLists.txt  base.hpp  graphics-wrapper.hpp  lu_opengl_renderer.cpp  lu_window.cpp  main.cpp
testbed/: CMakeLists.txt  main.cpp
web/: index.html
